@@ -79,7 +79,7 @@ COM_CONFIG_FIELD_FTP_USERNAME_DESC="The username used to access the FTP server."
 COM_CONFIG_FIELD_FTP_USERNAME_LABEL="FTP Username"
 COM_CONFIG_FIELD_GZIP_COMPRESSION_DESC="Compress buffered output if supported."
 COM_CONFIG_FIELD_GZIP_COMPRESSION_LABEL="Gzip Page Compression"
-COM_CONFIG_FIELD_HELP_SERVER_DESC="Select the name of the help server from which your system will collect the help screen displays. Set to Local to use those files within the core installation of Joomla!. Click the Reset button to restore the default help server. Warning: Pressing Reset will erase any custom help servers you have added."
+COM_CONFIG_FIELD_HELP_SERVER_DESC="Select the name of the help server from which your system will collect the help screen displays."
 COM_CONFIG_FIELD_HELP_SERVER_LABEL="Help Server"
 COM_CONFIG_FIELD_LOG_PATH_DESC="For logging of Joomla. Please specify a folder."
 COM_CONFIG_FIELD_LOG_PATH_LABEL="Path to Log Folder"
